//ALL REQUEST PROTOS SHOULD INCLUDE A MinimumUserProto AS optional that represents which client sent it/triggered it 
//DO NO START PROPERTY METHODS WITH THE WORDS NEW OR COPY

import "LeaderBoard.proto";
import "SharedEnumConfig.proto";
import "User.proto";


package com.lvl6.proto;

option java_outer_classname = "EventLeaderBoardProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO


//------------------------------------------------------------------------------------------

message RetrieveStrengthLeaderBoardRequestProto {
	optional MinimumUserProto sender = 1;
	
	//for client: if you want the highest strength up to the 50th highest 
	//strength, minRank is 1, maxRank is 50
	//for server: ranks start at 0, offset client values
	optional int32 minRank = 2;
	optional int32 maxRank = 3;
}

message RetrieveStrengthLeaderBoardResponseProto {
	optional MinimumUserProto sender = 1;
	optional StrengthLeaderBoardProto senderLeaderBoardInfo = 2;
	repeated StrengthLeaderBoardProto leaderBoardInfo = 3;
	optional ResponseStatus status = 4;
	

}

//------------------------------------------------------------------------------------------

message RetrieveMiniEventLeaderBoardRequestProto {
	optional MinimumUserProto sender = 1;
	optional int32 miniEventTimetableId = 2;
	optional int32 minRank = 3;
	optional int32 maxRank = 4;
}

message RetrieveMiniEventLeaderBoardResponseProto {
	optional MinimumUserProto sender = 1;
	optional MiniEventLeaderBoardProto senderLeaderBoardInfo = 2; //if rank of 0 sent back, they didn't participate in mini event
	repeated MiniEventLeaderBoardProto leaderBoardInfo = 3;
	optional ResponseStatus status = 4;
}
