//ALL REQUEST PROTOS SHOULD INCLUDE A MinimumUserProto AS optional that represents which client sent it/triggered it 
//DO NO START PROPERTY METHODS WITH THE WORDS NEW OR COPY

import "MiniEvent.proto";
import "Reward.proto";
import "SharedEnumConfig.proto";
import "User.proto";

package com.lvl6.proto;

option java_outer_classname = "EventMiniEventProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO

//------------------------------------------------------------------------------------------
//updates the user's current MiniEvent, creates one if nonexistent, or returns user's current MiniEvent
message RetrieveMiniEventRequestProto {
	optional MinimumUserProto sender = 1;
	
	//replaceExistingUserMiniEvent = user has redeemed all rewards
	//false means:
	//a) user has no MiniEvent, then a new one will be created (if possible)
	//b) user has a MiniEvent, then information about this MiniEvent is returned
	//true means:
	//a) user's MiniEvent equals currently active MiniEvent, then information about this MiniEvent is returned
	//b) user's MiniEvent doesn't equal currently active MiniEvent,
	//	i) there is no active MiniEvent, then no MiniEvent info is returned
	//	ii) there is an active MiniEvent, then a new one will be created	 
}

message RetrieveMiniEventResponseProto {
	optional MinimumUserProto sender = 1;
	optional UserMiniEventProto userMiniEvent = 2;
	
	optional ResponseStatus status = 3;
	
}

//------------------------------------------------------------------------------------------
message UpdateMiniEventRequestProto {
	optional MinimumUserProto sender = 1;
	repeated UserMiniEventGoalProto updatedGoals = 2;
}

message UpdateMiniEventResponseProto {
	optional MinimumUserProto sender = 1;
	optional ResponseStatus status = 2;
	
}

//------------------------------------------------------------------------------------------

message RedeemMiniEventRewardRequestProto {
	optional MinimumUserProtoWithMaxResources sender = 1;
	
	//the tier that is being redeemed
	optional RewardTier tierRedeemed = 2;
	//MiniEventForPlayerLevelProto.mefplId
	optional int32 mefplId = 3;
	
	optional int64 clientTime = 4;
	
	enum RewardTier {
		TIER_ONE = 1;
		TIER_TWO = 2;
		TIER_THREE = 3;
	}
}
																						//DONE
message RedeemMiniEventRewardResponseProto {
     optional MinimumUserProto sender = 1;
     optional ResponseStatus status = 2 [default = FAIL_OTHER];
     optional UserRewardProto rewards = 3;
     
}

//------------------------------------------------------------------------------------------
